--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,6 @@ body {
   font-family: Verdana, sans-serif;
 }
 
-h1 {
-  font-size: 48px;
-  text-align: center;
-  background-color: #A4CB5F;
-  color: #2F2F2F;
-  padding: 5px;
-}
-
 nav,footer {
   font-size: 25px;
   background-color: #444444;
@@ -56,4 +48,36 @@ p {
 
 h2 {
   font-size: 28px;
+}
+
+
+/*after this is new, also took out h1 from above to change a couple things*/
+
+#banner {
+  background-color: #A4CB5F;
+  padding: 5px;
+}
+
+h1 {
+  font-size: 48px;
+  text-align: center;
+  color: #2F2F2F;
+}
+
+.bio {
+  display: inline-block;
+}
+
+.bio img {
+  display: float;
+  float: left;
+  padding: 10px;
+  padding-right: 20px;
+}
+
+#icon {
+  display: float;
+  float: left;
+  padding: 5px;
+  padding-left: 10px;
 }
